Added bower keywords

--- a/bower.json
+++ b/bower.json
@@ -2,20 +2,31 @@
 	"name": "extnd",
 	"version": "0.0.2",
 	"main": "extnd.js",
+	"keywords": [
+		"extnd",
+		"class",
+		"multiple",
+		"inheritance",
+		"super",
+		"extend",
+		"oo",
+		"object",
+		"orientation"
+	],
 	"ignore": [
-	".*",
-	"*.custom.*",
-	"*.template.*",
-	"*.log",
-	"*.md",
-	"component.json",
-	"package.json",
-	"coverage",
-	"doc",
-	"modularize",
-	"node_modules",
-	"perf",
-	"test",
-	"vendor"
+		".*",
+		"*.custom.*",
+		"*.template.*",
+		"*.log",
+		"*.md",
+		"component.json",
+		"package.json",
+		"coverage",
+		"doc",
+		"modularize",
+		"node_modules",
+		"perf",
+		"test",
+		"vendor"
 	]
 }
